--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "apollo-boost": "^0.1.28",
+    "fortmatic": "^1.1.3",
     "graphql": "^14.1.1",
     "react": "^16.8.2",
     "react-apollo": "^2.4.1",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "web3": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
