--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@truffle/contract": "^4.1.9",
+    "@uniswap/sdk": "^1.0.0-beta.4",
     "apollo-boost": "^0.1.28",
+    "bignumber": "^1.1.0",
+    "bignumber.js": "^9.0.0",
     "fortmatic": "^1.1.3",
     "graphql": "^14.1.1",
     "react": "^16.8.2",
