--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grommet-icons": "^4.4.0",
     "react": "^16.8.2",
     "react-apollo": "^2.4.1",
+    "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
