--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "^14.1.1",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
+    "qrcode": "^1.4.4",
     "react": "^16.8.2",
     "react-apollo": "^2.4.1",
     "react-awesome-button": "^6.5.1",
