--- a/package.json
+++ b/package.json
@@ -4,21 +4,18 @@
   "private": true,
   "dependencies": {
     "3box": "^1.17.0",
-    "@keep-network/tbtc.js": "^0.6.6",
+    "@keep-network/tbtc.js": "^0.6.10",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@truffle/contract": "^4.1.9",
     "@uniswap/sdk": "^1.0.0-beta.4",
-    "apollo-boost": "^0.1.28",
     "bignumber.js": "^9.0.0",
     "bootstrap": "^4.4.1",
     "fortmatic": "^1.1.3",
-    "graphql": "^14.1.1",
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
     "qrcode": "^1.4.4",
     "react": "^16.8.2",
-    "react-apollo": "^2.4.1",
     "react-awesome-button": "^6.5.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.2",
@@ -28,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
